@@ -469,19 +469,27 @@ int passwd_to_vpopmail( char *domain )
 
 int set_sqwebmail_pass( char *domain)
 {
+   int ret = 0;
  struct vqpasswd *pw;
+ uid_t uid;
+ gid_t gid;
 
 	if ( Debug == 1 ) {
 		printf("Setting sqwebmail passwords for %s\n", domain);
 	}
+
+	ret = vpopmail_uidgid(&uid, &gid);
+	if (!ret) {
+	   fprintf(stderr, "set_sqwebmail_pass: cannot determine my uid or gid\n");
+	   return VA_UNKNOWN_UIDGID;
+	  }
 
 	pw = vauth_getall(domain, 1, 0);
 	while( pw != NULL ) {
 		if ( Debug == 1 ) {
 			printf("%s\n", pw->pw_name);
 		}
-    		vsqwebmail_pass( pw->pw_dir, pw->pw_passwd, 
-			VPOPMAILUID, VPOPMAILGID);
+	    vsqwebmail_pass( pw->pw_dir, pw->pw_passwd, uid, gid);
 		pw = vauth_getall(domain, 0, 0);
 	}
 	return(0);
