@@ -220,6 +220,7 @@ int copy_email( fs_file, filename, domain, pwent)
  char *domain;
  struct vqpasswd *pwent;
 {
+   int ret = 0;
  static char tmpbuf[MAX_BUFF];
  static char tmpbuf1[MAX_BUFF];
  FILE *fs;
@@ -227,6 +228,12 @@ int copy_email( fs_file, filename, domain, pwent)
  struct stat mystatbuf;
  uid_t uid;
  gid_t gid;
+
+ ret = vpopmail_uidgid(&uid, &gid);
+ if (!ret) {
+	fprintf(stderr, "vpopmail_uidgid failed\n");
+	return -1;
+ }
 
     /* At this point, we know that the user exists in the auth backend.
      * Now we need to run some other checks before we can copy the
@@ -316,7 +323,7 @@ int copy_email( fs_file, filename, domain, pwent)
 		return -1;
 	}
 	/* fix permissions */
-	chown(tmpbuf, VPOPMAILUID, VPOPMAILGID);
+	chown(tmpbuf, uid, gid);
 	chmod(tmpbuf, 0600);
 	return(0);
 }
